--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "babel-jest": "^27.0.1",
     "css": "^3.0.0",
     "eslint": "^8.3.0",
+    "eslint-plugin-import": "^2.29.1",
     "gh-pages": "^3.1.0",
     "htmlhint": "^1.0.0",
     "jest": "^27.0.1",
@@ -35,5 +36,8 @@
     "createdAt": "2024-01-24T14:12:42.297Z",
     "version": "8.0.0",
     "commit": "df14b61576f0321119b1906ba3544ab94fc2b1a1"
+  },
+  "dependencies": {
+    "openai": "^4.28.0"
   }
 }
